<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.registered_Activity">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.004">
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" tools:srcCompat="@tools:sample/avatars"
                android:id="@+id/imageView"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/ID_editText" android:minHeight="48dp" android:hint="@string/login_id"
                android:phoneNumber="true"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/password_editText" android:minHeight="48dp"
                android:hint="@string/login_password"/>
        <Button
                android:text="@string/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/login_button"/>
        <Button
                android:text="@string/registered_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/registered_button"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>