<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.Login_Activity" android:background="#ECEAEA">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="220sp" android:id="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView6" app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/order_jbs_bg"/>
    <TextView
            android:text="@string/elmapp_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView6"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="1dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:textSize="20sp" android:gravity="center"
            android:background="@color/pay_btn_color" android:textColor="#1976D2" android:padding="10sp"/>
    <TextView
            android:layout_height="500sp" android:id="@+id/textView8"
            app:layout_constraintEnd_toEndOf="parent" android:background="@drawable/blue_jbs_bg"
            android:layout_width="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.16000003"
            android:id="@+id/linearLayout2">

        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <ImageView
                    android:src="@mipmap/app_icon"
                    android:background="@drawable/circle_oval_bg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView"/>
        </RelativeLayout>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/loginID_editText" android:minHeight="48dp" android:hint="@string/login_id"
                android:autofillHints="" android:inputType="number" android:textColorHint="#546E7A"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/loginpassword_editText" android:minHeight="48dp"
                android:hint="@string/login_password" android:textColorHint="#546E7A"/>
        <Button
                android:text="@string/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/login_button"
                android:background="@color/pay_btn_color" android:textColor="#01579B"/>
        <Button
                android:text="@string/registered_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/registered_button" android:background="#2196F3"
                android:textColor="#212121"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>